@@ -5,16 +5,12 @@ import org.eclipse.viatra2.emf.incquery.base.itc.graphimpl.Graph;
 public class Graph1 extends Graph<Integer> {
 
 	private static final long serialVersionUID = -3807323812221410872L;
-
-	public Graph1() {
-    	
-	}
 	
 	public void modify() {
-		Integer n1 = new Integer(1);
-		Integer n2 = new Integer(2);
-		Integer n3 = new Integer(3);
-		Integer n4 = new Integer(4);
+		Integer n1 = Integer.valueOf(1);
+		Integer n2 = Integer.valueOf(2);
+		Integer n3 = Integer.valueOf(3);
+		Integer n4 = Integer.valueOf(4);
 			
 		this.insertNode(n1);
 		this.insertNode(n2);
